--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,7 @@
 <section>
     USER:WORKS
+
+    <button (click)="openDialog()" class="add-user-button" mat-fab color="primary"  matTooltip="Add User" [matTooltipPosition]="'above'">
+        <mat-icon>add</mat-icon>
+      </button>
 </section>
