--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,3 +1,9 @@
 section {
-    padding: 16px 56px 0px 56px;
+    padding: 1rem 3.5rem 0rem 3.5rem;
+}
+
+.add-user-button {
+    position: absolute;
+    right: 3.5rem;
+    bottom: 3.5rem;
 }
