--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -4,13 +4,13 @@
     <div class="input-parent">
         <mat-form-field class="mr-1" appearance="outline">
             <mat-label>First name</mat-label>
-            <input matInput placeholder="First name">
+            <input [(ngModel)]="user.firstName" matInput placeholder="First name">
             <!-- <mat-hint>Please enter your first name</mat-hint> -->
         </mat-form-field>
     
         <mat-form-field appearance="outline">
             <mat-label>Last name</mat-label>
-            <input matInput placeholder="Last name">
+            <input [(ngModel)]="user.lastName" matInput placeholder="Last name">
             <!-- <mat-hint>Please enter your last name</mat-hint> -->
         </mat-form-field>
     </div>
@@ -18,7 +18,7 @@
     <div class="input-parent">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Birth Date</mat-label>
-            <input matInput placeholder="Birth Date" [matDatepicker]="picker1">
+            <input [(ngModel)]="birthDate" matInput placeholder="Birth Date" [matDatepicker]="picker1">
             <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
             <mat-datepicker #picker1></mat-datepicker>
             <!-- <mat-hint>Please enter your birth date</mat-hint> -->
@@ -28,7 +28,7 @@
     <div class="input-parent">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Street / House No.</mat-label>
-            <input matInput placeholder="Street / House No.">
+            <input [(ngModel)]="user.street" matInput placeholder="Street / House No.">
             <!-- <mat-hint>Please enter your last name</mat-hint> -->
         </mat-form-field>
     </div>
@@ -36,13 +36,13 @@
     <div class="input-parent">
         <mat-form-field class="mr-1" appearance="outline">
             <mat-label>Zip code</mat-label>
-            <input matInput placeholder="Zip code">
+            <input [(ngModel)]="user.zipCode" matInput placeholder="Zip code">
             <!-- <mat-hint>Please enter your last name</mat-hint> -->
         </mat-form-field>
 
         <mat-form-field appearance="outline">
             <mat-label>City</mat-label>
-            <input matInput placeholder="City">
+            <input [(ngModel)]="user.city" matInput placeholder="City">
             <!-- <mat-hint>Please enter your last name</mat-hint> -->
         </mat-form-field>
     </div>
@@ -50,5 +50,5 @@
 </div>
 <div mat-dialog-actions>
     <button mat-button>Cancel</button>
-    <button mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button (click)="saveUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </div>
