--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,11 @@
     min-height: 3.5rem;
     padding: 0rem 1rem 0rem 1rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+    img {
+        max-width: 100%;
+        object-fit: contain;
+    }
 }
 
 .menu-items {
