--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,26 @@
 <section>
-    USER:WORKS
+  <mat-card>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>E-Mail</th>
+        <th>City</th>
+      </tr>
+      <tr>
+          <td>Test</td>
+          <td>Test e</td>
+          <td>Test c</td>
+      </tr>
+      <tr>
+        <td>Test</td>
+        <td>Test e</td>
+        <td>Test c</td>
+    </tr>
+    </table>
+  </mat-card>
 
-    <button (click)="openDialog()" class="add-user-button" mat-fab color="primary"  matTooltip="Add User" [matTooltipPosition]="'above'">
-        <mat-icon>add</mat-icon>
-      </button>
+  <button (click)="openDialog()" class="add-user-button" mat-fab color="primary" matTooltip="Add User"
+    [matTooltipPosition]="'above'">
+    <mat-icon>add</mat-icon>
+  </button>
 </section>
