--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -7,3 +7,49 @@ section {
     right: 3.5rem;
     bottom: 3.5rem;
 }
+
+table {
+    border-collapse: collapse;
+
+
+    tr {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+
+        &:first-child {
+            cursor: unset;
+            &:hover {
+                background-color: unset;
+            }
+        }
+
+        &:last-child {
+            border-bottom: 0;
+        }
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.15);
+        }
+    }
+
+
+    th {
+        height: 3rem;
+        color: rgba(0, 0, 0, 0.5);
+        font-weight: 800;
+        text-align: start;
+
+        &:first-child {
+            padding-left: 1rem;
+        }
+    }
+
+
+    td {
+        height: 3rem;
+
+        &:first-child {
+            padding-left: 1rem;
+        }
+    }
+}
