--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -1,1 +1,29 @@
-<p>dialog-edit-address works!</p>
+<h1 mat-dialog-title>Edit User-Address</h1>
+<div mat-dialog-content>
+
+    <div class="input-parent">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Street / House No.</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Street / House No.">
+        </mat-form-field>
+    </div>
+
+    <div class="input-parent">
+        <mat-form-field class="mr-1" appearance="outline">
+            <mat-label>Zip code</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Zip code">
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>City</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="City">
+        </mat-form-field>
+    </div>
+
+</div>
+<div mat-dialog-actions>
+    <button [disabled]="loading" (click)="dialogRef.close()" mat-button>Cancel</button>
+    <button [disabled]="loading" (click)="saveUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+</div>
+
+<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
