--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -23,7 +23,7 @@
 </div>
 <div mat-dialog-actions>
     <button [disabled]="loading" (click)="dialogRef.close()" mat-button>Cancel</button>
-    <button [disabled]="loading" (click)="saveUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button [disabled]="loading" (click)="updateUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </div>
 
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
